[gd_scene load_steps=7 format=3 uid="uid://d12ummtmpg0gj"]

[ext_resource type="Script" uid="uid://cm6ag3xem2jth" path="res://content/scenes/game/game_world/game_world.gd" id="1_lyskl"]
[ext_resource type="PackedScene" uid="uid://ciyua6j5d8shu" path="res://content/overlays/hud/hud.tscn" id="3_15yh2"]
[ext_resource type="PackedScene" uid="uid://h7sagg1dg0yc" path="res://components/general_components/game_camera/game_camera.tscn" id="4_6qayx"]
[ext_resource type="PackedScene" uid="uid://cgg8586s6l5xr" path="res://content/biomes/shallows/shallows.tscn" id="4_gegr6"]
[ext_resource type="PackedScene" uid="uid://c6ahc38chi0w4" path="res://components/visual_components/bounds_skirt/bounds_skirt.tscn" id="5_kfohe"]
[ext_resource type="PackedScene" uid="uid://c7xn7uk5h1ldd" path="res://content/player/player.tscn" id="6_2tdqq"]

[node name="GameWorld" type="Node2D"]
script = ExtResource("1_lyskl")

[node name="HUD" parent="." instance=ExtResource("3_15yh2")]

[node name="InnerReef" parent="." instance=ExtResource("4_gegr6")]

[node name="BoundsSkirt" parent="." instance=ExtResource("5_kfohe")]
_vertical_skirt = 8000
_horizontal_skirt = 8000

[node name="Darkness" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="Player" parent="." instance=ExtResource("6_2tdqq")]
position = Vector2(4325, 2004)

[node name="GameCamera" parent="Player" instance=ExtResource("4_6qayx")]
_limit_padding = 80
